--- a/front-end/taller/css/styles.css
+++ b/front-end/taller/css/styles.css
@@ -1,53 +1,4 @@
 body {
-
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-
-}
-
-.container {
-
-    padding: 80px;
-    border-radius: 10px;
-}
-
-h1,
-h2 {
-    text-align: center;
-}
-
-form {
-    max-width: 500px;
-    margin: 0 auto;
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-input[type="text"],
-input[type="email"],
-select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #90d4ff;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-
-button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-button:hover {
-    background-color: #0056b3;
+        background-color: rgb(16, 1, 85);
+        
 }
